feat: Add word cloud background with Roboto Bold font and transparency
- Add word cloud background component with 20% opacity
- Implement Python Flask server for word cloud generation
- Auto-download Roboto Bold font from Google Fonts if not found
- Word cloud positioned behind word effects at z-index 0
- Circular motion animation without rotation
- Larger container (150vw x 150vh) to prevent edge visibility
- Use darkest colors from album cover art
- Compact word packing with maximum density
- Persistent word cloud that doesn't disappear on state changes

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test:all": "npm run test && npm run test:e2e && npm run proof:generate",
     "proof:generate": "tsx scripts/generate-proof-pack.ts",
     "verify": "tsx scripts/run-verification.ts",
-    "verify:full": "npm run test:all"
+    "verify:full": "npm run test:all",
+    "wordcloud:server": "python3 scripts/wordcloud_server.py",
+    "wordcloud:generate": "python3 scripts/generate_wordcloud.py"
   },
   "dependencies": {
     "react": "^19.2.0",
